@@ -5,6 +5,7 @@ MAINTAINER Anthony Almarza <anthony.almarza@gmail.com>
 WORKDIR /var/django-roadies
 
 COPY requirements-dev.txt requirements-dev.txt
+COPY requirements-test.txt requirements-test.txt
 
 VOLUME ['/var/django-roadies']
 
