@@ -1,2 +1,2 @@
 #!/bin/bash
-docker run -it --rm -v $PWD:/var/django-roadies django_roadies tox
+docker run -it --rm -v $PWD:/var/django-roadies django_roadies bash -c './bin/test && ./bin/coverage'
