@@ -1,0 +1,17 @@
+#!/bin/bash
+
+version=$1
+shift
+
+short_name=$1
+shift
+
+python setup.py sdist
+
+git commit -am "Version bump $version: $short_name"
+
+git push
+
+git tag $version -m $short_name
+git push --tags
+
