@@ -1,0 +1,2 @@
+coverage==4.4.2
+mock==2.0.0; python_version == '2.7'
