@@ -4,7 +4,7 @@ author = Anthony Almarza
 author-email = anthony.almarza@gmail.com
 summary = Suite of django specific utilities/helpers.
 description-file = README.md
-description-content-type = text/markdown; charset=UTF-8
+long-description-content-type = text/markdown; charset=UTF-8
 home-page = https://github.com/anthonyalmarza/django-roadies
 license = MIT
 classifier =
