@@ -5,13 +5,15 @@ envlist = py{27,35,36}
 [testenv]
 usedevelop = True
 deps =
+    -rrequirements-test.txt
     py27: Django>=1.11.8,<2.0
-    py27: mock
     py35: Django>=2.0
     py36: Django>=2.0
     -e{toxinidir}/.
-    coverage
-passenv = TERM # ensure colors
+passenv =
+    TERM  # ensure colors
+    COVERAGE_*  # coverage options
+setenv =
+    COVERAGE_FILE = ./reports/{env:COVERAGE_FILE:unit}_{envname}.coverage
 commands =
     coverage run manage.py test --noinput
-    coverage report -m
